--- a/index.html
+++ b/index.html
@@ -912,11 +912,11 @@
             <div class="section-title animate-on-scroll"><h2>My Portfolio</h2></div>
             <div class="portfolio-grid" data-stagger-children="true">
                 <div class="portfolio-item animate-on-scroll"><img src="dp.jpg" alt="E-Commerce Website"><div class="portfolio-overlay"><h3>E-Commerce Website</h3><p>Full-featured online store...</p><a href="#" class="btn btn-primary">View Project</a></div></div>
-                <div class="portfolio-item animate-on-scroll"><img src="book.jpg" alt="Book Website"><div class="portfolio-overlay"><h3>Book Website</h3><p>Modern business website...</p><a href="#" class="btn btn-primary">View Project</a></div></div>
                 <div class="portfolio-item animate-on-scroll"><img src="tuslr.jpg" alt="Tuslr Website"><div class="portfolio-overlay"><h3>Tuslr Website</h3><p>Admin dashboard for fitness app...</p><a href="#" class="btn btn-primary">View Project</a></div></div>
+                <div class="portfolio-item animate-on-scroll"><img src="dp.jpg" alt="Blog Platform"><div class="portfolio-overlay"><h3>Blog Platform</h3><p>Custom CMS for content creators...</p><a href="#" class="btn btn-primary">View Project</a></div></div>
                 <div class="portfolio-item animate-on-scroll"><img src="tuslr.jpg" alt="Restaurant Website"><div class="portfolio-overlay"><h3>Restaurant Website</h3><p>Online menu and reservation...</p><a href="#" class="btn btn-primary">View Project</a></div></div>
                 <div class="portfolio-item animate-on-scroll"><img src="dp.jpg" alt="Blog Platform"><div class="portfolio-overlay"><h3>Blog Platform</h3><p>Custom CMS for content creators...</p><a href="#" class="btn btn-primary">View Project</a></div></div>
-                <div class="portfolio-item animate-on-scroll"><img src="book.jpg" alt="Photographer Portfolio"><div class="portfolio-overlay"><h3>Portfolio Website</h3><p>Creative showcase for photographer...</p><a href="#" class="btn btn-primary">View Project</a></div></div>
+                <div class="portfolio-item animate-on-scroll"><img src="tuslr.jpg" alt="Restaurant Website"><div class="portfolio-overlay"><h3>Restaurant Website</h3><p>Online menu and reservation...</p><a href="#" class="btn btn-primary">View Project</a></div></div>
             </div>
         </div>
     </section>
