--- a/index.html
+++ b/index.html
@@ -853,8 +853,8 @@
                     <div class="subtitle" id="typing-subtitle"></div>
                     <p>A passionate Web Developer creating modern and responsive websites that help businesses grow online. I specialize in crafting digital experiences that are both beautiful and functional.</p>
                     <div class="hero-btns">
-                        <a href="#contact" class="btn btn-primary"><i class="fas fa-paper-plane"></i>Get In Touch</a>
-                        <a href="#portfolio" class="btn btn-outline"><i class="fas fa-briefcase"></i>View My Work</a>
+                        <a href="#contact" class="btn btn-primary magnetic-btn"><i class="fas fa-paper-plane"></i>Get In Touch</a>
+                        <a href="#portfolio" class="btn btn-outline magnetic-btn"><i class="fas fa-briefcase"></i>View My Work</a>
                     </div>
                 </div>
                 <div class="hero-image">
