Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Hi, I'm <span>Muhammad A. Fahad</span></h1>
+                    <h1>Hi, I'm <span>Muhammad Fahad</span></h1>
                     <div class="subtitle" id="typing-subtitle"></div>
                     <p>A passionate and results-driven Web Developer with 3+ years of industry experience. I design and develop modern websites that empower businesses to grow confidently in the digital world.</p>
                     <div class="hero-btns">
@@ -1144,7 +1144,7 @@
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    <div class="footer-copyright"><p>© <span id="year"></span> Muhammad A. Fahad. All Rights Reserved.</p></div>
+                    <div class="footer-copyright"><p>© <span id="year"></span> Muhammad Fahad. All Rights Reserved.</p></div>
                 </div>
             </div>
         </div>
