Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                 <div class="about-image animate-on-scroll" data-delay="0.2"><img src="fahad1.png" alt="About Muhammad A. Fahad"></div>
                 <div class="about-text animate-on-scroll" data-delay="0.4">
                     <h3>Welcome to my <span>Digital Space!</span></h3>
-                    <p>I am Muhammad A. Fahad, a passionate and results-driven Web Developer, currently pursuing my degree in Computer Science. With 3 to 4 years of real industry experience, I design and develop modern websites that empower businesses to grow confidently in the digital world.</p>
+                    <p>I am Muhammad Fahad, a passionate and results-driven Web Developer, currently pursuing my degree in Computer Science. With 3 to 4 years of real industry experience, I design and develop modern websites that empower businesses to grow confidently in the digital world.</p>
                     <p>During my journey, I have worked with multiple business owners, startups, and agencies — helping them establish a strong and engaging online presence. My focus remains on building websites that are not only visually powerful but also fast, secure, and optimized for user experience and conversions.</p>
                     
                     <div class="about-highlights">
