--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhammad A. Fahad | Professional Web Developer</title>
+    <title>Muhammad  Fahad | Professional Web Developer</title>
     <link rel="icon" type="image/x-icon" href="fav.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> 
@@ -877,7 +877,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="fahad2.jpg" alt="Muhammad A. Fahad" class="main-img">
+                    <img src="hero1.png" alt="Muhammad Fahad" class="main-img">
                 </div>
             </div>
         </div>
@@ -893,7 +893,7 @@
         <div class="container">
             <div class="section-title animate-on-scroll"><h2>About Me</h2></div>
             <div class="about-content animate-on-scroll">
-                <div class="about-image animate-on-scroll" data-delay="0.2"><img src="fahad1.png" alt="About Muhammad A. Fahad"></div>
+                <div class="about-image animate-on-scroll" data-delay="0.2"><img src="hero1png" alt="About Muhammad  Fahad"></div>
                 <div class="about-text animate-on-scroll" data-delay="0.4">
                     <h3>Welcome to my <span>Digital Space!</span></h3>
                     <p>I am Muhammad Fahad, a passionate and results-driven Web Developer, currently pursuing my degree in Computer Science. With 3 to 4 years of real industry experience, I design and develop modern websites that empower businesses to grow confidently in the digital world.</p>
@@ -1335,3 +1335,4 @@
     </script>
 </body>
 </html>
+
