--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
         <div class="container">
             <div class="section-title animate-on-scroll"><h2>About Me</h2></div>
             <div class="about-content animate-on-scroll">
-                <div class="about-image animate-on-scroll" data-delay="0.2"><img src="hero1png" alt="About Muhammad  Fahad"></div>
+                <div class="about-image animate-on-scroll" data-delay="0.2"><img src="about1.png" alt="About Muhammad  Fahad"></div>
                 <div class="about-text animate-on-scroll" data-delay="0.4">
                     <h3>Welcome to my <span>Digital Space!</span></h3>
                     <p>I am Muhammad Fahad, a passionate and results-driven Web Developer, currently pursuing my degree in Computer Science. With 3 to 4 years of real industry experience, I design and develop modern websites that empower businesses to grow confidently in the digital world.</p>
@@ -1335,5 +1335,6 @@
     </script>
 </body>
 </html>
+
 
 
